# fizmo-sdl

./: CHANGELOG.md  CHANGELOG.txt  Makefile  Makefile.am  config-conds.m4  config-libs.m4  config-subst.m4  config.default.mk  config.macports.mk  configure.ac
doc/: changelog.xml
src/fizmo-sdl/: Makefile  Makefile.am  fizmo-sdl.c
src/locales/: Makefile  fizmo_sdl_locales.c  fizmo_sdl_locales.h
src/locales/de_DE/: fizmo_sdl_i18n.txt
src/locales/en_US/: fizmo_sdl_i18n.txt
